remove containerName, rename to imageVersion
